fix rowgap desktop-view

--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ max-width: 1440px;
     "course__one course__two course__twoPointFive" 
     "course__three course__four course__five"
     ;
-    gap: 5rem 2rem;
+    gap: 8rem 6rem;
   }
 
 }
